--- a/data-product-manifest.yaml
+++ b/data-product-manifest.yaml
@@ -1,11 +1,11 @@
-version: 0.0.5
+version: 0.0.6
 jobId: "381"
 jobName: Test_load_iceberg_jdbc_SCD1_Mansi
 jobType: Source Aligned Data Product
-domain: finance
-alias: write_in_iceberg7
+domain: hr
+alias: write_in_iceberg
 discoveryPort:
-  name: Test_load_iceberg_jdbc_SCD1_Mansi4
+  name: Test_load_iceberg_jdbc_SCD1_Mansi
 inputPorts:
   - alias: read_csv_onprim_with_s3_conn_vishnu_1
     isDynamic: true
@@ -23,10 +23,7 @@ productState:
   isDynamic: true
   alias: write_in_iceberg
   retentionVersions: ""
-  logicalSchema:
-    properties:
-      City: STRING
-      Region: STRING
+  logicalSchema: ""
   stateStoreType: loadDataIceberg
   isProfilingEnabled: false
   updateStrategy: SCD1
