--- a/data-product-manifest.yaml
+++ b/data-product-manifest.yaml
@@ -1,13 +1,12 @@
-version: 0.0.1
+version: 0.0.2
 jobId: "121"
 jobName: Weather Daily copy copy
 jobType: Source Aligned Data Product
 developerId: 384fafba-c5d1-4671-ae73-e2b1d2b3c2dc
-domain: manufacturing
+domain: marketing
 alias: Load_all_data_weather_daily
 discoveryPort:
   name: Weather Daily copy copy
-  shortDescription: weather daily
 inputPorts:
   - alias: Weather_1
     isDynamic: true
