--- a/data-product-manifest.yaml
+++ b/data-product-manifest.yaml
@@ -1,4 +1,4 @@
-version: 0.0.3
+version: 0.0.4
 jobId: "1055"
 jobName: Mansi_SADP_timestamp_test
 jobType: Source Aligned Data Product
@@ -51,7 +51,8 @@ transformation:
       - inputDataFrame: Weather_Data_1
         tempViewName: temp
     query: select monotonically_increasing_id() AS rowid,*,cast(localtime as
-      timestamp_ntz) as timestamp_ntz from temp
+      timestamp_ntz) as timestamp_ntz,to_utc_timestamp(localtime, 'UTC') as
+      timestamp_utc from temp
     optional:
       persistDataFrame: false
     type: operationThroughSqlQuery
