--- a/data-product-manifest.yaml
+++ b/data-product-manifest.yaml
@@ -1,67 +1,51 @@
-version: 0.0.10
-jobId: "398"
-jobName: Test_sample_data_state_mngt_Mansi
+version: 0.0.2
+jobId: "1076"
+jobName: demo_sadp_mansi
 jobType: Source Aligned Data Product
-domain: sale
-alias: read6
+developerId: a7c26b3c-3e9b-4fd9-bde8-805d1fd1697e
+domain: finance
+alias: write_to_postgres
 discoveryPort:
-  name: Test_sample_data_state_mngt_Mansi
+  name: demo_sadp_mansi
 inputPorts:
-  - alias: weather_data_Mansi_1
+  - alias: demo_csv_1
     isDynamic: true
-    path: s3://byte-etl-externaldemo/weather_data/20230626130122.csv
+    path: s3://byte-etl-externaldemo/Test_SCD1/incr_1.csv
     optional:
       persistDataFrame: false
       advanceOptions:
         delimiter: ","
       enableDataReconciliation: false
       enforceSchema: false
-      connection: Mansi_S3
-      dataSetUrn: urn:dv:dataset:7ea0f9b9-1b2b-4d8c-a3b6-2a68936e1ad9
+      connection: s3_conn_vishnu
+      dataSetUrn: urn:dv:dataset:28e86188-3b1e-44c3-bf2b-f261f7b42569
     type: inputDelimited
 productState:
-  persistDataFrame: false
-  catalogType: glue
-  enforceSchema: false
-  stepName: read
-  tableName: select lat,lon from glue.s3Source.weather_daily
-  warehousePath: s3://bp-spark-sql-library-test-acc/
-  catalogName: glue
-  type: readDataIceberg
-  isStateManagement: true
-  sequence: 3
-  alias: read
-  refreshInterval: None
+  isDynamic: true
+  alias: write_to_postgres
   retentionVersions: ""
-  logicalSchema:
-    properties:
-      Actual:
-        type: STRING
-        description: ""
-      Predicted:
-        type: STRING
-        description: ""
-  enforceSchemaMethod: ""
+  logicalSchema: ""
+  stateStoreType: writeDataFrameToPostgresTable
   isProfilingEnabled: false
+  updateStrategy: Overwrite
+  connection: demo_postgres
+  tableName: demo2
+  optional:
+    persistDataFrame: false
+    enableDataReconciliation: false
+    enforceSchema: false
+  refreshInterval: None
 transformation:
   - isDynamic: true
-    alias: EMR_PySpark_1
-    description: Run pyspark code
+    alias: Select_Columns_1
+    description: select cols
     sequence: 2
-    arguments:
-      - s3://byte-etl-externaldemo/weather_data/20230626130122.csv
-    pythonFilePath: s3://bp-spark-sql-library-test-acc/custom-jobs/CustomPythonJobWriteParquetTimeOut.py
-    inputDataFrameList:
-      - inputDataFrame: ""
-        tempViewName: ""
+    inputDataFrame: demo_csv_1
+    columns:
+      - id
+      - name
     optional:
-      pythonEnvTarGZPath: s3://byte-etl-externaldemo/pyspark_serverless_test/pyspark_venv.tar.gz
-    type: customPySparkEMRServerless
+      persistDataFrame: false
+    type: selectColumns
 controlPort:
   dataQualityRules: {}
-outputPort:
-  subscriptionChannels:
-    - channelType: Postgres
-      queryType: SQL
-    - channelType: Dataproduct
-      queryType: SQL
