--- a/data-product-manifest.yaml
+++ b/data-product-manifest.yaml
@@ -1,67 +1,39 @@
-version: 0.0.10
-jobId: "398"
-jobName: Test_sample_data_state_mngt_Mansi
+jobId: "1117"
+jobName: test_lineage_on_prem_mansi
 jobType: Source Aligned Data Product
-domain: sale
-alias: read6
+developerId: a7c26b3c-3e9b-4fd9-bde8-805d1fd1697e
+domain: supply_chain
+alias: write_to_postgres
 discoveryPort:
-  name: Test_sample_data_state_mngt_Mansi
+  name: test_lineage_on_prem_mansi
 inputPorts:
-  - alias: weather_data_Mansi_1
+  - alias: test_par_onprem_1
     isDynamic: true
-    path: s3://byte-etl-externaldemo/weather_data/20230626130122.csv
+    path: /data/tmp/sample2.parquet
     optional:
       persistDataFrame: false
       advanceOptions:
-        delimiter: ","
+        mergeSchema: true
       enableDataReconciliation: false
       enforceSchema: false
-      connection: Mansi_S3
-      dataSetUrn: urn:dv:dataset:7ea0f9b9-1b2b-4d8c-a3b6-2a68936e1ad9
-    type: inputDelimited
+      connection: on-prem-Miloni
+      dataSetUrn: urn:dv:dataset:ec6c9edd-bea0-4ea1-9420-153a287fc936
+    type: inputParquet
 productState:
-  persistDataFrame: false
-  catalogType: glue
-  enforceSchema: false
-  stepName: read
-  tableName: select lat,lon from glue.s3Source.weather_daily
-  warehousePath: s3://bp-spark-sql-library-test-acc/
-  catalogName: glue
-  type: readDataIceberg
-  isStateManagement: true
-  sequence: 3
-  alias: read
-  refreshInterval: None
+  isDynamic: true
+  alias: write_to_postgres
   retentionVersions: ""
-  logicalSchema:
-    properties:
-      Actual:
-        type: STRING
-        description: ""
-      Predicted:
-        type: STRING
-        description: ""
-  enforceSchemaMethod: ""
+  logicalSchema: ""
+  stateStoreType: writeDataFrameToPostgresTable
   isProfilingEnabled: false
-transformation:
-  - isDynamic: true
-    alias: EMR_PySpark_1
-    description: Run pyspark code
-    sequence: 2
-    arguments:
-      - s3://byte-etl-externaldemo/weather_data/20230626130122.csv
-    pythonFilePath: s3://bp-spark-sql-library-test-acc/custom-jobs/CustomPythonJobWriteParquetTimeOut.py
-    inputDataFrameList:
-      - inputDataFrame: ""
-        tempViewName: ""
-    optional:
-      pythonEnvTarGZPath: s3://byte-etl-externaldemo/pyspark_serverless_test/pyspark_venv.tar.gz
-    type: customPySparkEMRServerless
+  updateStrategy: Overwrite
+  connection: Postgres_Mansi
+  tableName: test_lineage
+  optional:
+    persistDataFrame: false
+    enableDataReconciliation: false
+    enforceSchema: false
+  refreshInterval: None
+transformation: []
 controlPort:
   dataQualityRules: {}
-outputPort:
-  subscriptionChannels:
-    - channelType: Postgres
-      queryType: SQL
-    - channelType: Dataproduct
-      queryType: SQL
