--- a/data-product-manifest.yaml
+++ b/data-product-manifest.yaml
@@ -1,67 +1,191 @@
-version: 0.0.10
-jobId: "398"
-jobName: Test_sample_data_state_mngt_Mansi
+jobId: "74"
+jobName: Supply Master
 jobType: Source Aligned Data Product
+developerId: 384fafba-c5d1-4671-ae73-e2b1d2b3c2dc
 domain: sale
-alias: read6
+alias: Load_Supply_Master
 discoveryPort:
-  name: Test_sample_data_state_mngt_Mansi
+  name: Supply Master
 inputPorts:
-  - alias: weather_data_Mansi_1
+  - alias: GRN_Details_1
     isDynamic: true
-    path: s3://byte-etl-externaldemo/weather_data/20230626130122.csv
+    path: s3://dataverse-sale/datasets/SupplyMaster.csv
     optional:
       persistDataFrame: false
       advanceOptions:
         delimiter: ","
       enableDataReconciliation: false
       enforceSchema: false
-      connection: Mansi_S3
-      dataSetUrn: urn:dv:dataset:7ea0f9b9-1b2b-4d8c-a3b6-2a68936e1ad9
+      connection: SAP Supply Chain
+      dataSetUrn: urn:dv:dataset:4bbcfaed-6bd1-4d7c-9cab-619ecfffee07
+    type: inputDelimited
+  - alias: Inventory_in_W/H_1
+    isDynamic: true
+    path: s3://dataverse-sale/datasets/SupplyMaster.csv
+    optional:
+      persistDataFrame: false
+      advanceOptions:
+        delimiter: ","
+      enableDataReconciliation: false
+      enforceSchema: false
+      connection: SAP Supply Chain
+      dataSetUrn: urn:dv:dataset:00d63fcb-d8e6-4ef0-b809-6cff70248b9a
+    type: inputDelimited
+  - alias: Supply_Details_1
+    isDynamic: true
+    path: s3://dataverse-sale/datasets/supply_chain_data.csv
+    optional:
+      persistDataFrame: false
+      advanceOptions:
+        delimiter: ","
+      enableDataReconciliation: false
+      enforceSchema: false
+      connection: SAP Supply Chain
+      dataSetUrn: urn:dv:dataset:07617feb-d134-4e78-bae5-6f850704bc45
     type: inputDelimited
 productState:
-  persistDataFrame: false
-  catalogType: glue
-  enforceSchema: false
-  stepName: read
-  tableName: select lat,lon from glue.s3Source.weather_daily
-  warehousePath: s3://bp-spark-sql-library-test-acc/
-  catalogName: glue
-  type: readDataIceberg
-  isStateManagement: true
-  sequence: 3
-  alias: read
-  refreshInterval: None
+  isDynamic: true
+  alias: Load_Supply_Master
   retentionVersions: ""
   logicalSchema:
     properties:
-      Actual:
+      TransactionID:
         type: STRING
-        description: ""
-      Predicted:
+        description: Unique identifier for each transaction
+        sourceColumn: TransactionID
+        sourceTable: Supply_Details_Report
+      Transaction_Date:
         type: STRING
-        description: ""
-  enforceSchemaMethod: ""
-  isProfilingEnabled: false
+        description: Date when the transaction occurred
+        sourceColumn: Transaction_Date
+        sourceTable: Supply_Details_Report
+      Product_ID:
+        type: STRING
+        description: Unique identifier for each product
+        sourceColumn: Product_ID
+        sourceTable: Supply_Details_Report
+      Quantity:
+        type: STRING
+        description: Number of products involved in the transaction
+        sourceColumn: Quantity
+        sourceTable: Supply_Details_Report
+      Supplier_ID:
+        type: STRING
+        description: Unique identifier for each supplier
+        sourceColumn: Supplier_ID
+        sourceTable: Supply_Details_Report
+      Customer_ID:
+        type: STRING
+        description: Unique identifier for each customer
+        sourceColumn: Customer_ID
+        sourceTable: Supply_Details_Report
+      Transaction_Type:
+        type: STRING
+        description: Type of the transaction (e.g., purchase, return)
+        sourceColumn: Transaction_Type
+        sourceTable: Supply_Details_Report
+      Unit_Price:
+        type: STRING
+        description: Price of a single unit of the product
+        sourceColumn: Unit_Price
+        sourceTable: Supply_Details_Report
+      Total_Price:
+        type: STRING
+        description: Total price of the transaction (Unit_Price * Quantity)
+        sourceColumn: Total_Price
+        sourceTable: Supply_Details_Report
+      Location:
+        type: STRING
+        description: Location where the transaction occurred
+        sourceColumn: Location
+        sourceTable: Supply_Details_Report
+      Last_Ordered_Date:
+        type: STRING
+        description: Date when the product was last ordered
+        sourceColumn: Last_Ordered_Date
+        sourceTable: Supply_Details_Report
+      Expected_Next_Order_Date:
+        type: STRING
+        description: Expected date for the next order
+        sourceColumn: Expected_Next_Order_Date
+        sourceTable: Supply_Details_Report
+      Channel:
+        type: STRING
+        description: Channel through which the transaction was made (e.g., online, in-store)
+        sourceColumn: Channel
+        sourceTable: Supply_Details_Report
+      Business_Partner_ID:
+        type: STRING
+        description: Unique identifier for each business partner
+        sourceColumn: Business_Partner_ID
+        sourceTable: Supply_Details_Report
+      Expected_Order_Quantity:
+        type: STRING
+        description: Expected quantity for the next order
+        sourceColumn: Expected_Order_Quantity
+        sourceTable: Supply_Details_Report
+      Expected_Order_Receive_Date:
+        type: STRING
+        description: Expected date to receive the next order
+        sourceColumn: Expected_Order_Receive_Date
+        sourceTable: Supply_Details_Report
+      Stock_On_Hand:
+        type: STRING
+        description: Current stock quantity available
+        sourceColumn: Stock_On_Hand
+        sourceTable: Supply_Details_Report
+      Stock_Aging:
+        type: STRING
+        description: Age of the stock in days
+        sourceColumn: Stock_Aging
+        sourceTable: Supply_Details_Report
+  stateStoreType: loadDataIceberg
+  isProfilingEnabled: true
+  updateStrategy: Overwrite
+  tableName: s3source.supply_details
+  warehousePath: s3://dataverse-sale/SADP/
+  catalogName: glue
+  optional:
+    persistDataFrame: false
+    enableDataReconciliation: false
+    enforceSchema: true
+    enforceSchemaMethod: Warning
+    catalogType: glue
+    loggingOptions:
+      printSchema: true
+  refreshInterval: None
 transformation:
   - isDynamic: true
-    alias: EMR_PySpark_1
-    description: Run pyspark code
-    sequence: 2
-    arguments:
-      - s3://byte-etl-externaldemo/weather_data/20230626130122.csv
-    pythonFilePath: s3://bp-spark-sql-library-test-acc/custom-jobs/CustomPythonJobWriteParquetTimeOut.py
+    alias: Spark_SQL_1
+    description: Creating Supply Master
+    sequence: 4
     inputDataFrameList:
-      - inputDataFrame: ""
-        tempViewName: ""
+      - inputDataFrame: GRN_Details_1
+        tempViewName: temp1
+      - inputDataFrame: Inventory_in_W/H_1
+        tempViewName: temp2
+      - inputDataFrame: Supply_Details_1
+        tempViewName: supply
+    query: select * from supply
     optional:
-      pythonEnvTarGZPath: s3://byte-etl-externaldemo/pyspark_serverless_test/pyspark_venv.tar.gz
-    type: customPySparkEMRServerless
+      persistDataFrame: false
+    type: operationThroughSqlQuery
 controlPort:
-  dataQualityRules: {}
-outputPort:
-  subscriptionChannels:
-    - channelType: Postgres
-      queryType: SQL
-    - channelType: Dataproduct
-      queryType: SQL
+  dataQualityRules:
+    NullValueCheck:
+      productState:
+        checks:
+          - column: Transaction_Date
+        referenceAlias: Load_Supply_Master
+    UniquenessCheck:
+      productState:
+        checks:
+          - column: sku_id
+        referenceAlias: Load_Supply_Master
+    UniqueCombinationCheck:
+      productState:
+        checks:
+          - columns:
+              - sku_id
+              - store_id
+        referenceAlias: Load_Supply_Master
